--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,11 @@
+kate (4:15.08.2-0ubuntu2) UNRELEASED; urgency=medium
+
+  * Vivid backport. 
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Mon, 02 Nov 2015 21:34:45 +0000
+
 kate (4:15.08.2-0ubuntu1) wily; urgency=medium
 
-  * Vivid backport
   * New upstream release
 
  -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 14 Oct 2015 11:58:32 +0100
