--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kate (4:15.08.3-1~) UNRELEASED; urgency=medium
+
+  * New upstream release (15.08.3).
+
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 09 Nov 2015 09:26:16 +0100
+
 kate (4:15.08.2-1) unstable; urgency=medium
 
   * Add copyright information about the current license of the linkable
