--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 kate (4:15.12.0-1~) UNRELEASED; urgency=medium
 
   * New upstream release (15.12.0).
+  * Update install files.
 
  -- Maximiliano Curia <maxy@debian.org>  Wed, 16 Dec 2015 16:08:52 +0100
 
