--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-kate (4:15.12.0-1~) UNRELEASED; urgency=medium
+kate (4:15.12.1-1~) UNRELEASED; urgency=medium
 
   * New upstream release (15.12.0).
   * Update install files.
+  * New upstream release (15.12.1).
 
- -- Maximiliano Curia <maxy@debian.org>  Wed, 16 Dec 2015 16:08:52 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 29 Jan 2016 11:06:08 +0100
 
 kate (4:15.08.3-1) unstable; urgency=medium
 
