--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-kate (4:15.12.3-0ubuntu1) UNRELEASED; urgency=medium
+kate (4:15.12.3-0ubuntu1) xenial; urgency=medium
 
   * New upstream bugfix release
   * New upstream bugfix release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 16 Mar 2016 19:08:33 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 14 Apr 2016 15:03:10 -0700
 
 kate (4:15.12.1-0ubuntu1) xenial; urgency=medium
 
