--- a/debian/changelog
+++ b/debian/changelog
@@ -1,23 +1,16 @@
-kate (4:16.04.1-1~1.gbpa6ea2f) UNRELEASED; urgency=medium
-
-  ** SNAPSHOT build @a6ea2f0b1ad4714f58a97678511506dadd02471b **
+kate (4:16.04.1-1) unstable; urgency=medium
 
   [ Automatic packaging ]
-  ** SNAPSHOT build @959259438e528b8284c0b289e403d996112a267a **
-
   * Bump Standards-Version to 3.9.8
 
   [ Maximiliano Curia ]
   * New upstream release (15.12.2).
-  * Hacky use of xephyr
   * Improve the testsuite script
-  * Drop xephyr
   * Replace the "Historical name" ddeb-migration by its "Modern, clearer" replacement dbgsym-migration.
   * Add upstream metadata (DEP-12)
   * debian/control: Update Vcs-Browser and Vcs-Git fields
-  * UNRELEASED
 
- -- Maximiliano Curia <jenkins@amadeus.gnuservers.com.ar>  Tue, 10 May 2016 22:09:15 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Sat, 28 May 2016 01:31:49 +0200
 
 kate (4:15.12.1-1) experimental; urgency=medium
 
