--- a/debian/changelog
+++ b/debian/changelog
@@ -1,20 +1,13 @@
-kate (4:16.08.2-1~2.gbpac4869) UNRELEASED; urgency=medium
-
-  ** SNAPSHOT build @ac48690b45eae4052e31be7550b661b2b21b797e **
+kate (4:16.08.2-1) unstable; urgency=medium
 
   [ Maximiliano Curia ]
-  ** SNAPSHOT build @94aa9836bcfebe8811b2f65c5ce044f492edaa84 **
-
-  * UNRELEASED
-  * UNRELEASED
-  * Update install files
-  * UNRELEASED
+  * New upstream release (16.08.2)
   * Update install files
 
   [ Automatic packaging ]
   * Update build-deps and deps with the info from cmake
 
- -- Maximiliano Curia <maxy@gnuservers.com.ar>  Fri, 14 Oct 2016 18:30:59 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 17 Oct 2016 23:13:09 +0200
 
 kate (4:16.04.2-1) unstable; urgency=medium
 
