--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,8 @@
-kate (4:16.08.3-1~1.gbp59cad9) UNRELEASED; urgency=medium
+kate (4:16.08.3-1) unstable; urgency=medium
 
-  ** SNAPSHOT build @59cad9c973d01308e78964ed5002cbced8e579bf **
+  * New upstream release (16.08.3)
 
-  * UNRELEASED
-
- -- Maximiliano Curia <jenkins@gnuservers.com.ar>  Thu, 10 Nov 2016 22:09:23 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Wed, 23 Nov 2016 20:55:36 +0100
 
 kate (4:16.08.2-1) unstable; urgency=medium
 
