--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,13 @@
-kate (4:17.08.1-1~) UNRELEASED; urgency=medium
+kate (4:17.08.1-1) experimental; urgency=medium
 
   * New upstream release (17.08.1)
   * Bump Standards-Version to 4.1.0.
   * Update upstream metadata
   * Update build-deps and deps with the info from cmake
+  * Add breaks/replaces against the kde-l10n packages
+  * Release to experimental
 
- -- Maximiliano Curia <maxy@debian.org>  Tue, 05 Sep 2017 17:44:04 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 12 Sep 2017 15:35:53 +0200
 
 kate (4:17.08.1-0neon) xenial; urgency=medium
 
