--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ kate (4:17.08.3-0r1) UNRELEASED; urgency=medium
   * Remove unused build dependencies: libkf5notifications-dev, and
     libkf5service-dev.
   * Update lintian overrides.
+  * Drop rules to remove files from debian/tmp, since the references files do
+    not exist anymore in this source.
 
  -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 26 Nov 2017 12:53:52 +0100
 
