--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,7 @@
-kate (4:17.08.3-0r1) UNRELEASED; urgency=medium
+kate (4:17.08.3-1) unstable; urgency=medium
+
+  * Team upload.
+  * Upload to unstable. (Closes: #880173)
 
   [ Pino Toscano ]
   * New upstream release.
@@ -17,7 +20,7 @@ kate (4:17.08.3-0r1) UNRELEASED; urgency=medium
     - recommend sonnet-plugins (Closes: #880800)
     - drop the aspell | ispell | hspell suggest
 
- -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 26 Nov 2017 12:53:52 +0100
+ -- Pino Toscano <pino@debian.org>  Sun, 26 Nov 2017 13:52:39 +0100
 
 kate (4:17.08.1-1) experimental; urgency=medium
 
