--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+kate (4:17.08.3-2) unstable; urgency=medium
+
+  * Team upload.
+  * Adjust again l10npkgs_firstversion_ok to the fixed version of kde-
+    l10n. (Closes: #883102)
+
+ -- Pino Toscano <pino@debian.org>  Sat, 02 Dec 2017 07:51:36 +0100
+
 kate (4:17.08.3-1) unstable; urgency=medium
 
   * Team upload.
