--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+kate (4:17.08.3-3) UNRELEASED; urgency=medium
+
+
+ -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 09 Dec 2017 12:04:39 +0100
+
 kate (4:17.08.3-2) unstable; urgency=medium
 
   * Team upload.
