--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ kate (4:17.08.3-3) UNRELEASED; urgency=medium
   * Bump Standards-Version to 4.1.2, no changes required.
   * Switch the transitional plasma-framework-dev build dependency with
     libkf5plasma-dev.
+  * Ship also the translated man pages of kate.
 
  -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 09 Dec 2017 12:04:39 +0100
 
