--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ kate (4:17.08.3-3) UNRELEASED; urgency=medium
   * Ship the desktop file to enable the Plasma applet katesessions.
   * Do not pass -DPYTHON_LIBRARY=etc anymore to cmake, since it is not used.
   * Remove unused library stuff from debian/rules.
+  * Add the "allow-stderr" restriction to the "testsuite" autopkgtest, since
+    the tools that run produce output also on stderr.
 
  -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 09 Dec 2017 12:04:39 +0100
 
